# ChangeLog for net-im/msn-transport
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/msn-transport/ChangeLog,v 1.12 2004/07/07 19:15:05 humpback Exp $

  07 Jul 2004; Gustavo Felisberto <humpback@gentoo.org>;
  msn-transport-20040531.ebuild:
  Stable on hppa so that deps dont break

  03 Jul 2004; Gustavo Felisberto <humpback@gentoo.org>;
  -msn-transport-1.2.8_rc1.ebuild, msn-transport-20040531.ebuild:
  Better dependencies

  19 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>;
  msn-transport-20040531.ebuild:
  Marking stable on x86

  08 Jun 2004; Guy Martin <gmsoft@gentoo.org> msn-transport-20040531.ebuild:
  Marked stable on hppa.

  03 Jun 2004; David Holm <dholm@gentoo.org> msn-transport-20040531.ebuild:
  Added to ~ppc.

*msn-transport-20040531 (01 Jun 2004)

  01 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>;
  msn-transport-20040531.ebuild, files/msn-transport.init:
  Adding new version and updating init script. Getting close to update.

  24 May 2004; Gustavo Felisberto <humpback@gentoo.org>;
  msn-transport-1.2.8_rc1.ebuild, msn-transport-20040228.ebuild:
  Changed description, thanks to Daniel Webert <daniel_webert@web.de> in bug
  51673

*msn-transport-20040228 (08 Apr 2004)

  08 Apr 2004; Gustavo Felisberto <humpback@gentoo.org>;
  msn-transport-20040228.ebuild:
  Adding version 20040228 and it's init script, helps fix bug 43851.

  25 Feb 2004; Jason Wever <weeve@gentoo.org> msn-transport-1.2.8_rc1.ebuild:
  Added ~sparc keyword, helps resolve bug #42928.

  17 Feb 2004; Gustavo Felisberto <humpback@gentoo.org>;
  msn-transport-1.2.8_rc1.ebuild:
  Marking stable on x86

*msn-transport-1.2.8_rc1 (23 Jan 2004)

  23 Jan 2004; Gustavo Felisberto <humpback@gentoo.org>; metadata.xml,
  msn-transport-1.2.8_rc1.ebuild, files/README.Gentoo,
  files/msn-configure-patch-00, files/msnt.xml:
  Initial import. Helps close bug 37316
