@@ -1,8 +1,12 @@
 MD5 1bba14b70f246271b51a01114337a8c4 ChangeLog 1941
 MD5 d76a7c620d2b4630a7f3f6d6a0f4e353 metadata.xml 319
+MD5 ccd7f8df6d029a078d3bf6dc9bc4e06e msn-transport-20040531-r1.ebuild 1392
 MD5 e3a39683542d05f68ac8bf4c42743de5 msn-transport-20040531.ebuild 1311
 MD5 052318a7b8dfc18122569ed5aac82ab2 files/README.Gentoo 1495
+MD5 24baea5afe908664d6f3bbe45ba373fe files/msn-transport.init-r2 696
+MD5 6b5eaadda94bd02fb01ef8ae6631c7fd files/digest-msn-transport-20040531-r1 75
 MD5 6b5eaadda94bd02fb01ef8ae6631c7fd files/digest-msn-transport-20040531 75
 MD5 2bb7338640063281eeef587f8ce0fd5e files/msn-configure-patch-00 805
 MD5 1a17bb67fdeeb80bc939d27e87750290 files/msn-transport.init 422
 MD5 5fd3cce8c18bc9ca1aa9ff085bcb3f7e files/msnt.xml 3328
+MD5 b683c5c99f2b4ae436f1ff8a11da8a1a files/msn-transport-conf.d 427
