@@ -1,0 +1,33 @@
+#!/sbin/runscript
+
+depend() {
+	need net
+	use jabber-server
+}
+
+start() {
+	ebegin "Starting MSN Jabber Transport"
+	if [ -f ${PIDFILE} ]; then
+                if [ -z $(ps ax | grep `cat ${PIDFILE}` | grep -v grep ) ]
+                then
+                        rm -f ${PIDFILE}
+                fi
+        fi
+
+	/usr/sbin/jabberd -B -c ${CONFIG} -H /var/spool/jabber >/dev/null 2>&1
+	eend $?
+}
+
+stop() {
+	ebegin "Stoping MSN Jabber Transport"
+        if [ -f ${PIDFILE} ]; then
+                kill `cat ${PIDFILE}`
+        fi
+        sleep 2
+        if [ -f ${PIDFILE} ]; then
+                kill -9 `cat ${PIDFILE}`
+                rm -f ${PIDFILE}
+        fi
+        rm -f ${PIDFILE}
+	eend $?
+}
