@@ -1,6 +1,13 @@
 # ChangeLog for net-im/msn-transport
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/msn-transport/ChangeLog,v 1.12 2004/07/07 19:15:05 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/msn-transport/ChangeLog,v 1.13 2004/07/09 18:07:04 humpback Exp $
+
+*msn-transport-20040531-r1 (09 Jul 2004)
+
+  09 Jul 2004; Gustavo Felisberto <humpback@gentoo.org>;
+  +files/msn-transport-conf.d, +files/msn-transport.init-r2,
+  +msn-transport-20040531-r1.ebuild:
+  New revision that installs more stable init.d script
 
   07 Jul 2004; Gustavo Felisberto <humpback@gentoo.org>;
   msn-transport-20040531.ebuild:
